--- a/css/style.css
+++ b/css/style.css
@@ -16,17 +16,84 @@ body {
   background-color: var(--very-dark-blue);
   color: var(--white);
   text-align: center;
-  margin-top: 10px;
+}
+
+h1 {
+  margin: 15px 0 20px;
+}
+
+.btn {
+  width: 100px;
+  margin: 10px;
+  border-width: 3px;
+
+  color: var(--very-dark-blue);
+  background-color: var(--golden-yellow);
+  background-image: linear-gradient(#fecc4c, #ffac33);
+  border-color: var(--golden-yellow);
+
+  cursor: pointer;
+}
+
+.btn:hover {
+  background-image: linear-gradient(#ffcc4c, #f89808);
 }
 
 .regras-container {
-  background-color: var(--golden-yellow);
+  margin: auto;
+  margin-top: 25px;
+  padding: 10px;
+
+  border-radius: 15px;
+  border: 5px solid var(--yellow);
+
+  background-color: var(--white);
+  color: var(--very-dark-blue);
+}
+
+.regras-container summary {
+  cursor: pointer;
+}
+
+.regras-container summary:hover {
+  text-decoration: underline;
+}
+
+.regras-container ul {
+  list-style-type: none;
+}
+
+.regras-container p {
+  margin: 10px 0;
+}
+
+@media (min-width: 760px) {
+  .regras-container {
+    width: 60%;
+  }
 }
 
 .pontuacao-container {
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding-top: 20px;
-  font-size: 20px;
+  justify-content: space-around;
+  margin: 30px 0;
+  font-size: 1.2rem;
+}
+
+.pontos {
+  font-weight: 500;
+}
+
+.resultado-container {
+  font-size: 1.3rem;
+  margin: 15px 0;
+}
+
+#vencedor-msg {
+  margin-top: 25px;
+}
+
+#reiniciar-jogo-butao {
+  display: none;
+  margin: 20px auto;
 }
