--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,9 @@ h1 {
 
 .btn {
   width: 100px;
+  height: 40px;
   margin: 10px;
+  border-radius: 9px;
   border-width: 3px;
 
   color: var(--very-dark-blue);
